fixed responsivenes footer, full witdth on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ nav {
     min-height: 60vh;
     margin-top: auto;
     margin-bottom: auto;
-    width: 90%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -394,26 +394,32 @@ nav {
 
 .er-social-mobile {
     margin-bottom: 2em;
+    padding-right: 2em;
+    padding-left: 2em;
+}
+
+.er-social-mobile a {
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .er-social-dutchgems img {
-    margin-right: auto;
+    margin-right: 30px;
 }
 
 .er-social-facebook a:hover {
-    color: rgba(61, 91, 153);
+    color: rgba(61, 91, 153)!important;
 }
 
 .er-social-insta a:hover {
-    color: rgba(224, 80, 95);
+    color: rgba(224, 80, 95)!important;
 }
 
 .er-social-soundcloud a:hover {
-    color: rgb(225, 85, 0);
+    color: rgb(225, 85, 0)!important;
 }
 
 .er-social-youtube a:hover {
-    color: rgba(255, 0, 0);
+    color: rgba(255, 0, 0)!important;
 }
 
 /* ----------------------------------------Frontpage section specifics */
@@ -567,6 +573,11 @@ nav {
     margin-right: auto;
 }
 
+/* ----------------------------------------Back cover specifics */
+
+.er-credits-
+
+
 /* ----------------------------------------Create responsive 16:9 aspect ratio iframe */
 
 .er-content-thirds {
@@ -627,8 +638,7 @@ nav {
     width: 100vw;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 6em;
-    padding-bottom: 3em;
+    padding: 5em 2em 3em 2em;
     min-height: 100vh;
     background-color: rgba(60, 60, 60);
 }
@@ -720,6 +730,9 @@ nav {
     p {
         margin-right: 50px;
     }
+    .er-content-wrapper {
+        width: 90%;
+    }
     .er-sticker {
         top: 12vh;
         right: 6vw;
@@ -773,7 +786,6 @@ nav {
         text-align: center;
         color: rgba(60, 60, 60, 0.7);
     }
-
     .er-footer {
         width: 87vw;
     }
